cleanup dead code and bump dependency versions